Keyguard: Fix to better user experience when SIM pin unlock fails.
Currently if SIM PIN is enabled and user enters the SIM PIN
when cross binding is in progress unlock fails. This scenario
cannot be avoided though as this is timing related.So the fix
is to let the user know there is no decrease in PIN retry attempts
by displaying appropriate toast.

Fix: Check for cross mapping error result when SIM PIN request
fails and display the appropriate toast.

Change-Id: I3d055687a6a7e9d8dea35513c12c66e0f64acd75
CRs-Fixed: 854773.

--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -361,6 +361,8 @@
     <!-- Instructions telling the user that the operation to unlock the keyguard
          with SIM PIN failed. Displayed in one line in a large font.  -->
     <string name="kg_password_pin_failed">SIM PIN operation failed!</string>
+    <!-- Instructions telling the user that the SIM PIN operation requested is not supported.  -->
+    <string name="kg_pin_request_not_supported">Request is not supported currently.Please try again later.</string>
     <!-- Instructions telling the user that the operation to unlock the keyguard
          with PUK failed. Displayed in one line in a large font.  -->
     <string name="kg_password_puk_failed">SIM PUK operation failed!</string>
