--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -5227,5 +5227,5 @@
     <string name="international_roaming_warning">Do you want to turn on data while roaming?\nInternational roaming charges may apply.</string>
     <string name="turn_on_info">You can go to Settings-> Data roaming  to turn data on anytime.</string>
     <string name="turn_off_info">You can go to Settings-> Data roaming  to turn data off anytime.</string>
-
+    <string name="authentication_failure"></string>
 </resources>
