Frameworks:Translation issues in Portuguese Language for AMX
Hardcode string was used in Backup&reset setting.

Define string into resouce, and modify string fetching method.

CRs-Fixed: 882911
Change-Id: I3ce1b37a716a49cdac96cb440422c41197bef64d

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -5224,4 +5224,5 @@
 
     <string name="card_string">CARD <xliff:g id="slot_id">%1$s</xliff:g></string>
     <string name="authentication_failure"></string>
+    <string name="transport_destination_string">Backing up to debug-only private cache</string>
 </resources>
