Frameworks:Translation issues in Portuguese Language for AMX
Hardcode string was used in Backup&reset setting.

Define string into resouce, and modify string fetching method.

CRs-Fixed: 882911
Change-Id: I3ce1b37a716a49cdac96cb440422c41197bef64d

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -5228,4 +5228,5 @@
     <string name="turn_on_info">You can go to Settings-> Data roaming  to turn data on anytime.</string>
     <string name="turn_off_info">You can go to Settings-> Data roaming  to turn data off anytime.</string>
     <string name="authentication_failure"></string>
+    <string name="transport_destination_string">Backing up to debug-only private cache</string>
 </resources>
