Subsidy Lock Minor UI corrections
1) Red lock icon in unlock screen
2) Activation Progress need header
   title
3) Behind scrim alpha
   modified instead of front
   scrim
4) String corrections

Change-Id: Icbb6e9791d54cd900969e6d3dcb40b160d01eede
CRs-Fixed: 1094722

--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -387,13 +387,14 @@
     <string name="button_lockscreen_emergency_call">Emergency call</string>
 
     <string name="kg_subsidy_title_locked">Device Locked</string>
+    <string name="kg_subsidy_title_unlock_progress_dialog">Unlocking device</string>
     <string name="kg_subsidy_content_locked">
         Please insert a valid SIM to unlock the device.\n\nTap to unlock after making sure that connection to data network(cellular or Wi-Fi) is active.</string>
     <string name="kg_subsidy_title_activation">Activate SIM</string>
     <string name="kg_subsidy_content_activation">
         Please tap Activate button to tele-verify. If you have already tele-verified, please tap Unlock button.</string>
-    <string name="kg_subsidy_title_activating">Activating SIM</string>
-    <string name="kg_subsidy_content_activating">Please wait&#8230; \n\n checking with server.</string>
+    <string name="kg_subsidy_title_progress_activating">Activating SIM</string>
+    <string name="kg_subsidy_content_progress_server">Please wait&#8230; \n\nchecking with server.</string>
     <string name="kg_subsidy_content_pin_locked">Please call customer care to get the code to unlock or insert a valid SIM.</string>
     <plurals name="kg_subsidy_wrong_pin">
         <item quantity="one">Invalid code. \nYou have <xliff:g id="number">%d</xliff:g> attempt left.</item>
@@ -405,6 +406,6 @@
     <string name="kg_button_activate">Activate</string>
     <string name="kg_subsidy_wifi">WIFI</string>
     <string name="unlock_toast">Device unlocked</string>
-    <string name="kg_unlock_progress_dialog_message">Unlocking device\u2026</string>
     <string name="carrier_text_separator">"  |  "</string>
+    <string name="kg_pin_unlock_progress_dialog">Unlocking device\u2026</string>
 </resources>
