--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -408,4 +408,5 @@
     <string name="unlock_toast">Device unlocked</string>
     <string name="carrier_text_separator">"  |  "</string>
     <string name="kg_pin_unlock_progress_dialog">Unlocking device\u2026</string>
+    <string name="kg_subsidy_setup_wifi">Setup Wi-Fi</string>
 </resources>
