--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -409,4 +409,5 @@
     <string name="carrier_text_separator">"  |  "</string>
     <string name="kg_pin_unlock_progress_dialog">Unlocking device\u2026</string>
     <string name="kg_subsidy_setup_wifi">Setup Wi-Fi</string>
+    <string name="kg_dismiss_button_description">Dismiss lock screen</string>
 </resources>
