SystemUI : EoGRE AP enabling from systemUI
Do not allow EoGRE hotspot AP to get enabled from systemUI
Hotspot tile when Data is off on DUT.

CRs-fixed: 1101315
Change-Id: I10b61358890502b8b45d43c9d7c9ab0a20cd20ce

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -1155,4 +1155,6 @@
 
     <string name="sim1">SIM 1</string>
     <string name="sim2">SIM 2</string>
+    <!-- Toast message to turn on data for eogre -->
+    <string name="turn_on_data_msg">Please turn on data</string>
 </resources>
