SystemUI: Change the two operators's seperator.
We need to use two spaces between two operators,
and “|” for seperator symbol.

Change-Id: I0c2b9021ba4193cc13cb9ab50cbf643c561a2fb3
CRs-Fixed: 1094024

--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -385,4 +385,5 @@
     </plurals>
 
     <string name="button_lockscreen_emergency_call">Emergency call</string>
+    <string name="carrier_text_separator">"  |  "</string>
 </resources>
