--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4576,4 +4576,7 @@
     <string name="permission_remember_choice">Remember</string>
     <string name="permission">Permission</string>
     <string name="transport_destination_string">Backing up to debug-only private cache</string>
+    
+    <!-- TORCH NOTIFICATION STRINGS END-->
+    <string name="cancelSel">Cancel Selection</string>
 </resources>
