--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -429,4 +429,6 @@
     <string name="unknown_artist_name">Unknown artist</string>
     <string name="unknown_title_name">Unknown title</string>
     <string name="unknown_album_name">Unknown album</string>
+
+    <string name="lockscreen_longpress_star_unlock">Deja presionado <![CDATA[ <img src="ic_star.png"/>]]>\t para desbloquear.</string>
 </resources>
