--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -78,6 +78,7 @@
          charged, say that it is charged. -->
     <string name="keyguard_charged">Charged</string>
 
+    <string name="keyguard_charged_att">Battery is full.Please unplug the device.</string>
     <!-- When the lock screen is showing and the phone plugged in, and the battery
          is not fully charged, show the current charge %.  -->
     <string name="keyguard_plugged_in">Charging, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
