--- a/packages/Keyguard/res/values/strings.xml
+++ b/packages/Keyguard/res/values/strings.xml
@@ -410,4 +410,6 @@
     <string name="kg_pin_unlock_progress_dialog">Unlocking device\u2026</string>
     <string name="kg_subsidy_setup_wifi">Setup Wi-Fi</string>
     <string name="kg_dismiss_button_description">Dismiss lock screen</string>
+    <string name="kg_subsidy_title_progress_unknown">Configuring your phone</string>
+    <string name="kg_subsidy_content_progress_unknown">Please wait&#8230;</string>
 </resources>
